# BA_Fallstudie

./: README.md
DjangoAppBA_uploadFile/: db.sqlite3  manage.py
DjangoAppBA_uploadFile/DjangoAppBA_uploadFile/: asgi.py  settings.py  urls.py  wsgi.py
DjangoAppBA_uploadFile/UploadFileApp/: apps.py  models.py  urls.py  views.py
DjangoAppBA_uploadFile/UploadFileApp/migrations/: 0002_alter_uploadedfile_file.py
DjangoAppBA_uploadFile_publishable/: README.rst  setup.cfg
DjangoAppBA_uploadFile_publishable/DjangoAppBA_uploadFile_publishable.egg-info/: top_level.txt
DjangoAppBA_uploadFile_publishable/Django_UploadFileApp/: forms.py  urls.py  views.py
DjangoAppBA_uploadFile_publishable/Django_UploadFileApp/migrations/: 0001_initial.py
DjangoAppBA_uploadFile_publishable/Django_UploadFileApp/templates/uploadFile_templates/: deleteFile_success.html  uploadFile_success.html
FlaskAppBA_uploadFile/: app.py  blueprint_fileupload.db
FlaskAppBA_uploadFile/UploadFileBlueprint/: blueprint_forms.py  db_models.py  uploadFileBlueprint.py
FlaskAppBA_uploadFile/UploadFileBlueprint/templates/uploadFile_templates/: deleteFile.html  deleteFile_success.html  home.html  uploadFile.html  uploadFile_success.html
